2001-05-24  Jeffrey Stedfast  <fejj@ximian.com>

	* alloca.c: New file for systems that do not have alloca().

	* Makefile.am: build alloca.c

	* gmime-utils.c: Don't #include <alloca.h> - this is now handled
	by config.h.

	* config.h.in: Added alloca define checks.

	* acconfig.h: Remove some extra defines that we don't care about.

2001-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parse_content_headers): Simplified and also
	unfolded content-headers.

	* gmime-part.c (g_mime_part_get_filename): If there isn't a
	disposition, make sure that we don't ignore the possibility of a
	"name" param in the Content-Type header.

2001-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (need_quotes): Include '.' as a char to quote.

	* gen-table.c (main): Fixed a type-o.

	* internet-address.c (decode_mailbox): Be a little more forgiving
	about unexpected chars while parsing the name part of the email
	address. Skip the bad char and then retry. If we fail again,
	*then* we abort.

	* gmime-utils.c: #include <alloca.h>

	* gmime-parser.c (g_mime_parser_construct_part): Oops, inend
	points to the end of the string, not the last char of the string
	(ie, '\0' not the char before it).

2001-05-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-table-private.h: Oops, take out the check for isblank().

	* internet-address.c (decode_quoted_string): Get rid of unused
	variable.
	(decode_address): Same.

2001-04-03  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (decode_domain): Try to only get
	"fully-qualified" domain names, or ones that "look" like they are
	at least ;-)
	(decode_mailbox): If decode_domain() returns NULL, don't append
	the '@' char. Also make sure that the name is non-empty.

2001-04-01  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_quote_string): Made smarter.

2001-03-31  Jeffrey Stedfast  <fejj@ximian.com>

	* Makefile.am: Added rules to build gen-table.c and added
	gmime-table-private.h to the build.
