@@ -1,5 +1,8 @@
 2001-05-24  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* doc/Makefile.am: Use $(INSTALL) and $(INSTALL_DATA) rather than
+	`install -m 644`
+
 	* alloca.c: New file for systems that do not have alloca().
 
 	* Makefile.am: build alloca.c
